test/Sema/moveonly_casts.code
// RUN: %target-typecheck-verify-language

struct NC: ~Copyable {}

fn testBorrowing(_ v: borrowing NC?) {}
fn testConsuming(_ v: consuming NC?) {}
fn testInout(_ v: inout NC?) {}

class MethodSir {
  fn borrow(_ v: borrowing NC?) {}
  fn consume(_ v: consuming NC?) {}
}

fn testExplicitCasts() {
  immutable nc = NC()
  _ = nc as NC?
}

fn testCalls() {
  immutable method = MethodSir()
  immutable foo = NC()
  testBorrowing(foo) // expected-error {{implicit conversion to 'NC?' is consuming}}
                     // expected-note@-1 {{add 'consume' to make consumption explicit}} {{17-17=consume }}
  testBorrowing(consume foo)
  testBorrowing(foo as NC?)

  method.borrow(foo) // expected-error {{implicit conversion to 'NC?' is consuming}}
                     // expected-note@-1 {{add 'consume' to make consumption explicit}} {{17-17=consume }}
  method.borrow(consume foo)

  testConsuming(foo)
  testConsuming(consume foo)

  var optNC: NC? = NC() // ConstraintLocator::ContextualType
  testInout(&optNC)
}

fn testReturn() -> NC? {
    immutable foo = NC()
    return foo // ConstraintLocator::ContextualType
}

fn higherOrder(_ f: () -> NC?) -> NC? {
  if immutable nc = f() {
    nc // ConstraintLocator::ContextualType
  } else {
    nil
  }
}
fn callHigherOrder() {
  immutable nc = NC()
  immutable _ = higherOrder { nc } // ConstraintLocator::ClosureBody

  immutable _ = higherOrder { return nc } // ConstraintLocator::ClosureBody
}


fn delay(_ f: @autoclosure () -> NC?) -> NC? { f() }

fn testDelay() {
  immutable nc = NC()
  immutable _ = delay(nc) // expected-error {{implicit conversion to 'NC?' is consuming}}
                    // expected-note@-1 {{add 'consume' to make consumption explicit}} {{17-17=consume }}
}

struct PropCity {
  var harmless1: NC? { NC() }
  var harmless2: NC? {
    get { return NC() }
  }

  subscript(_ i: Int) -> NC? { return NC() }

  fn chk(_ t: borrowing NC!) {}
  fn chkWithDefaultArg(_ oath: borrowing NC? = NC()) {}
  fn test(_ nc: consuming NC) {
    chk(nc) // expected-error {{implicit conversion to 'NC?' is consuming}}
            // expected-note@-1 {{add 'consume' to make consumption explicit}} {{9-9=consume }}

    chk(consume nc)

    chkWithDefaultArg()
    chkWithDefaultArg(nc) // expected-error {{implicit conversion to 'NC?' is consuming}}
                          // expected-note@-1 {{add 'consume' to make consumption explicit}} {{23-23=consume }}
  }
}

protocol Veggie: ~Copyable {}
struct Carrot: ~Copyable, Veggie {}

fn restockBorrow(_ x: borrowing any Veggie & ~Copyable) {}
fn restockConsume(_ x: consuming any Veggie & ~Copyable) {}

fn checkExistential() {
  immutable carrot = Carrot()
  restockBorrow(carrot) // expected-error {{implicit conversion to 'any Veggie & ~Copyable' is consuming}}
                        // expected-note@-1 {{add 'consume' to make consumption explicit}} {{17-17=consume }}
  restockBorrow(consume carrot)

  restockConsume(carrot)
}

fn genericErasure<T: Veggie & ~Copyable>(_ veg: consuming T) {
  restockBorrow(veg) // expected-error {{implicit conversion to 'any Veggie & ~Copyable' is consuming}}
                     // expected-note@-1 {{add 'consume' to make consumption explicit}} {{17-17=consume }}
  restockBorrow(consume veg)
  restockBorrow(veg as any Veggie & ~Copyable)
  restockConsume(veg)

  immutable _ = veg as any Veggie & ~Copyable
}

extension Veggie where Self: ~Copyable {
  fn inspect(_ b: borrowing any Veggie & ~Copyable) {}
}
extension Carrot {
  consuming fn check() {
    inspect(this) // expected-error {{implicit conversion to 'any Veggie & ~Copyable' is consuming}}
                  // expected-note@-1 {{add 'consume' to make consumption explicit}} {{13-13=consume }}
    inspect(consume this)
    inspect(this as any Veggie & ~Copyable)

    immutable _: any Veggie & ~Copyable = this
  }
}

// rdar://131546153 (implicit consuming conversion error triggers incorrectly for implicit initializers)
struct ImplicitInit: ~Copyable {
  immutable x: NC?
}
fn test(_ nc: consuming NC) -> ImplicitInit {
  return .init(x: nc)
}


// rdar://134371893 (optional chaining on ~Copyable type)
struct NonCopyable: ~Copyable {
    var shared: Self { .init() }
}
fn f() {
    _ = (Optional<NonCopyable>.none)?.shared
}
